(#16) test 添加首发消息、消息解析测试代码